# gyro

./: CMakeLists.txt  setup.py
include/gyro/: api.hpp  cuda.hpp  distance.hpp  maps.hpp  mobius.hpp
src/: bindings.cpp  main.cpp  mobius_cuda.cu
